Edit for testing reasons

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="large-12 columns">
         <ul class="inline-list left">
           <li>Colors by <a target="_blank" href="http://en.wikipedia.org/wiki/Paul_Klee">Paul Klee</a></li>
-          <li>Design by <a target="_blank" href="http://www.delimited.io/blog">delimited.io</a></li>
+          <li>Design by <a target="_blank" href="http://www.delimited.io/blog">Steve Hall delimited.io</a></li>
           <li>Data inspired by LA County Homelessness Survey 2017</li>
         </ul>
       </div>
